Fix icons alignment
Resolves #1443

--- a/ui/src/app/shared/flo/flo.scss
+++ b/ui/src/app/shared/flo/flo.scss
@@ -73,7 +73,7 @@ $other-color: $navy-3;
       font-size: 14px;
     }
     .btn-fa-transparent {
-      padding: 0 8px;
+      padding: 4px 8px;
       height: 30px;
       font-size: 20px;
       color: $navy-2;
