--- a/ui/src/scss/components/_forms.scss
+++ b/ui/src/scss/components/_forms.scss
@@ -419,3 +419,12 @@ textarea.valid {
     }
   }
 }
+
+app-master-checkbox {
+  display: block;
+  height: 14px;
+  width: 14px;
+  input[type=checkbox] {
+    margin: 0;
+  }
+}
